2013-08-19  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add facility for control of child window placement.

	* wtkalign.h: New file; it declares the API for...
	(AlignWindow): ...this new extern "C" function; declare it.
	* wtkalign.c: New file; implement it.

	* dlgproc.cpp (GenericDialogue::Dismiss) [WM_INITDIALOG]: Use it.

	* configure.ac (AC_INIT): Bump version number to 0.1.1
	(AC_PROG_CC): Add test for C compiler.

	* Makefile.in (LIBWTK_OBJECTS): Add wtkalign.$OBJEXT
	(CC, CFLAGS): Define for compilation of C code, according to...
	(%.$OBJEXT: %.c): ...this new build rule; define it.
	(SRCDIST_FILES): Add wtkalign.c and wtkalign.h
	(install-headers): Add wtkalign.h

2013-08-19  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Convert to one-shot C++ compilation with dependency tracking.

	* Makefile.in (DEPFLAGS): Redefine; incorporate CPPFLAGS.
	(hsashctl.$OBJEXT vsashctl.$OBJEXT): Use it in place of CPPFLAGS.
	(%.$OBJEXT): Likewise; delete separate dependency tracking command.

2013-08-19  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add facility for activation of a running application window.

	* wtkdefs.h: New file; it defines...
	(EXTERN_C, BEGIN_NAMESPACE, END_NAMESPACE): ...these new macros.

	* wtkraise.cpp: New file; it implements...
	(RaiseAppWindow): ...this new extern "C" function.

	* wtklite.h (RaiseAppWindow): Declare it; it is designated by...
	(EXTERN_C): ...this new macro, within WTK namespace demarcated by...
	(BEGIN_NAMESPACE, END_NAMESPACE): ...this new macro pair.

	* Makefile.in (LIBWTK_OBJECTS): Add wtkraise.$OBJEXT
	(SRCDIST_FILES): Add wtkdefs.h and wtkraise.cpp
	(install-headers): Add wtkdefs.h

2013-08-19  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Do not track .orig files.

	* .hgignore (**.orig): Add pattern.
	* .gitignore (*.orig): Likewise.

2013-07-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add default handler for WM_CLOSE message.
